force-app/main/default/objects/VERSION_MNG__x/VERSION_MNG__x.object-meta.xml
<CustomObject>
    <description>VERSION_MNG</description>
    <externalDataSource>sights_dev_db</externalDataSource>
    <externalName>VERSION_MNG</externalName>
    <label>バージョン管理</label>
</CustomObject>