force-app/main/default/objects/VERSION_MNG__x/fields/ins_date__c.field-meta.xml
<CustomField>
    <fullName>ins_date__c</fullName>
    <description>ins_date</description>
    <externalDeveloperName>ins_date</externalDeveloperName>
    <label>ins_date</label>
    <type>DateTime</type>
</CustomField>