force-app/main/default/objects/VERSION_MNG__x/fields/latest_flag__c.field-meta.xml
<CustomField>
    <fullName>latest_flag__c</fullName>
    <description>latest_flag</description>
    <externalDeveloperName>latest_flag</externalDeveloperName>
    <label>latest_flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>