force-app/main/default/objects/VERSION_MNG__x/fields/version__c.field-meta.xml
<CustomField>
    <fullName>version__c</fullName>
    <description>version</description>
    <externalDeveloperName>version</externalDeveloperName>
    <label>version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>