force-app/main/default/objects/VERSION_MNG__x/fields/version_mng_id__c.field-meta.xml
<CustomField>
    <fullName>version_mng_id__c</fullName>
    <description>version_mng_id</description>
    <externalDeveloperName>version_mng_id</externalDeveloperName>
    <label>version_mng_id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>